--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="circuit-bg">
         <div class="header-content">
             <h1 class="spark-text">Mirza Taimur Ali Baig</h1>
-            <p class="typewriter">Electrical Engineer | Embedded Systems Specialist | Power Electronics Enthusiast</p>
+            <p class="typewriter">Term-4 Electrical Engineering Co-op Undergrad @ MUN</p>
             <nav>
                 <ul>
                     <li><a href="#about" class="nav-glow"><i class="fas fa-bolt"></i> About</a></li>
