--- a/index.html
+++ b/index.html
@@ -183,34 +183,32 @@
     </section>
 
     <section id="experience" class="fade-scroll">
-        <h2><span class="section-spark">Professional Experience</span></h2>
-        
-        <div class="timeline">
-            <div class="timeline-item">
-                <div class="timeline-date">Oct 2023 - Present</div>
-                <div class="timeline-content">
-                    <h3>Operations Manager | Banana Republic | St. John's, NL, Canada</h3>
-                    <ul>
-                        <li>Promoted from Sales Specialist to oversee all store inventory operations including shipment processing, configuration, and tracking, ensuring seamless operations</li>
-                        <li>Designed and implemented organizational plans that optimized workflow and improved accessibility</li>
-                        <li>Led a team of associates through performance management to achieve operational excellence and meet KPIs</li>
-                        <li>Automated inventory tracking using SQL queries and Excel macros (VLOOKUP/PivotTables), reducing processing time by 30%</li>
-                        <li>Optimized team workflows, improving operational efficiency by 50% through process redesign</li>
-                    </ul>
-                </div>
+    <h2><span class="section-spark">Professional Experience</span></h2>
+    <div class="timeline">
+        <div class="timeline-item">
+            <div class="timeline-date">Oct 2023 - Present</div>
+            <div class="timeline-content">
+                <h3>Operations Manager | Banana Republic</h3>
+                <ul class="experience-list">
+                    <li><span class="bullet">▹</span> Promoted from Sales Specialist to oversee all store inventory operations</li>
+                    <li><span class="bullet">▹</span> Designed organizational plans optimizing workflow and accessibility</li>
+                    <li><span class="bullet">▹</span> Led team through performance management to achieve KPIs</li>
+                    <li><span class="bullet">▹</span> Automated inventory tracking reducing processing time by 30%</li>
+                </ul>
             </div>
+        </div>
             
             <div class="timeline-item">
                 <div class="timeline-date">Dec 2023 - Feb 2024</div>
                 <div class="timeline-content">
                     <h3>Design Lead | MUN Concrete Toboggan | St. John's, NL, Canada</h3>
                     <ul>
-                        <li>Collaborated with multidisciplinary team to integrate ergonomic and aerodynamic improvements</li>
-                        <li>Ensured compliance with safety and competition regulations through load-bearing calculations and risk assessments</li>
-                        <li>Documented design iterations and test results to refine manufacturing processes</li>
-                        <li>Led structural design evaluation using AutoCAD, achieving 3rd place in national competition</li>
-                        <li>Prototyped load-bearing components, reducing material waste by 15% through iterative testing</li>
-                        <li>Programmed Arduino-based strain gauges on 1:8 scale model to monitor structural integrity</li>
+                        <li><span class="bullet">▹</span> Collaborated with a multidisciplinary team to integrate ergonomic and aerodynamic improvements</li>
+                        <li><span class="bullet">▹</span> Ensured compliance with safety and competition regulations through load-bearing calculations and risk assessments</li>
+                        <li><span class="bullet">▹</span> Documented design iterations and test results to refine manufacturing processes</li>
+                        <li><span class="bullet">▹</span> Led structural design evaluation using AutoCAD, achieving 3rd place in national competition</li>
+                        <li><span class="bullet">▹</span> Prototyped load-bearing components, reducing material waste by 15% through iterative testing</li>
+                        <li><span class="bullet">▹</span> Programmed Arduino-based strain gauges on 1:8 scale model to monitor structural integrity</li>
                     </ul>
                 </div>
             </div>
@@ -220,11 +218,11 @@
                 <div class="timeline-content">
                     <h3>Marketing Intern | Mulk International | Ajman, UAE</h3>
                     <ul>
-                        <li>Presented marketing sector to potential clients, expanding network to 70+ countries including USA and Canada</li>
-                        <li>Managed invoices and payrolls for global organizations including Emaar and Majid Al Futtaim</li>
-                        <li>Enhanced client outreach through digital marketing campaigns and international conferences</li>
-                        <li>Developed automated reporting tools in Excel (Power Query) for logistics data analysis</li>
-                        <li>Documented electrical safety protocols for on-site power tool operations (OSHA standards)</li>
+                        <li><span class="bullet">▹</span> Presented marketing sector to potential clients, expanding network to 70+ countries including USA and Canada</li>
+                        <li><span class="bullet">▹</span> Managed invoices and payrolls for global organizations including Emaar and Majid Al Futtaim</li>
+                        <li><span class="bullet">▹</span> Enhanced client outreach through digital marketing campaigns and international conferences</li>
+                        <li><span class="bullet">▹</span> Developed automated reporting tools in Excel (Power Query) for logistics data analysis</li>
+                        <li><span class="bullet">▹</span> Documented electrical safety protocols for on-site power tool operations (OSHA standards)</li>
                     </ul>
                 </div>
             </div>
@@ -234,9 +232,9 @@
                 <div class="timeline-content">
                     <h3>Sales Intern | GoldCrest Real Estate | Ajman, UAE</h3>
                     <ul>
-                        <li>Identified and achieved monthly sales targets by converting cold leads into hot leads</li>
-                        <li>Researched market trends to improve lead conversion, resulting in surplus sales</li>
-                        <li>Managed digital marketing campaigns through online real estate publishers</li>
+                        <li><span class="bullet">▹</span> Identified and achieved monthly sales targets by converting cold leads into hot leads</li>
+                        <li><span class="bullet">▹</span> Researched market trends to improve lead conversion, resulting in surplus sales</li>
+                        <li><span class="bullet">▹</span> Managed digital marketing campaigns through online real estate publishers</li>
                     </ul>
                 </div>
             </div>
