--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
                 <div class="experience-icon">
                     <i class="fas fa-robot"></i>
                 </div>
-                <div class="experience-content">
-                    <div class="experience-date">April 2025 - Present</div>
-                    <h3>Power Electronics Lead | Eastern Edge Robotics | St. John's, NL, Canada</h3>
-                    <ul>
-                        <li>Designed underwater ocean monitoring system for MATE ROV competition, achieving 12-hour continuous operation</li>
-                        <li>Configured lithium battery arrays (series/parallel combinations) for 1-week autonomous operation, reducing heat generation by 30%</li>
-                        <li>Selected and waterproofed sensors to maintain 98% data accuracy compared to the Atlantic Smart Buoy network</li>
-                    </ul>
+                    <div class="experience-bg" style="background-image: url('https://images.squarespace-cdn.com/content/v1/5ecb0bfadd255c127a746499/b5c02068-f008-4584-a5f7-629ce1221231/eastern-edge-robotics-logo.png')"></div>
+                    <div class="experience-content">
+                        <div class="experience-date">April 2025 - Present</div>
+                        <h3>Power Electronics Lead | Eastern Edge Robotics</h3>
+                        <ul>
+                            <li>Designed underwater ocean monitoring system for MATE ROV competition</li>
+                            <li>Configured lithium battery arrays reducing heat generation by 30%</li>
+                            <li>Maintained 98% data accuracy with waterproofed sensors</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            
             <div class="experience-item">
                 <div class="experience-icon">
                     <i class="fas fa-store"></i>
