--- a/index.html
+++ b/index.html
@@ -510,6 +510,35 @@
         </div>
     </div>
 </section>
+
+
+<section id="awards" class="fade-scroll">
+    <h2><span class="section-spark">Awards & Achievements</span></h2>
+    <div class="awards-grid">
+        <div class="award-card glow">
+            <i class="fas fa-medal award-icon"></i>
+            <h3>Best Volunteer Award</h3>
+            <p>SVB, St John's, NL, Canada (2025)</p>
+        </div>
+        <div class="award-card glow">
+            <i class="fas fa-trophy award-icon"></i>
+            <h3>Top Contender - Verafin Project</h3>
+            <p>Arduino Encryption Device<br>St John's, NL, Canada (2024)</p>
+        </div>
+        <div class="award-card glow">
+            <i class="fas fa-crown award-icon"></i>
+            <h3>AI Facial Recognition Winner</h3>
+            <p>C++ Team Project – $20,000<br>Dubai, UAE (2022)</p>
+        </div>
+        <div class="award-card glow">
+            <i class="fas fa-star award-icon"></i>
+            <h3>Top 1% Software Team</h3>
+            <p>STEM Competition<br>Dubai, UAE (2022)</p>
+        </div>
+    </div>
+</section>
+
+
     <section id="contact" class="fade-scroll">
         <h2><span class="section-spark">Get In Touch</span></h2>
         <div class="contact-grid">
@@ -531,6 +560,7 @@
             </a>
         </div>
     </section>
+    
     
     <footer>
         <p>© 2025 Mirza Taimur Ali Baig | Electrical Engineering Portfolio</p>
