--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="circuit-bg">
             <div class="header-content">
                 <h1 class="spark-text">Mirza Taimur Ali Baig</h1>
-                <p class="typewriter">Term-4 Electrical Engineering Co-op Undergrad @ Memorial University of Newfoundland</p>
+                <p class="typewriter">Term-5 Electrical Engineering Co-op Undergrad @ Memorial University of Newfoundland</p>
                 <nav>
                     <ul>
                         <li><a href="#about" class="nav-glow"><i class="fas fa-bolt"></i> About</a></li>
@@ -42,7 +42,7 @@
     <div class="about-content">
         <div class="left-column">
             <div class="profile-image">
-                <img src="https://media.licdn.com/dms/image/v2/D4E03AQFOA1XU6K7vpg/profile-displayphoto-shrink_800_800/B4EZSWGsyLHAAc-/0/1737685127348?e=1749686400&v=beta&t=_sdOPzjAtgamInE8AsUttv0aSRpl9FpM_afVCHMw53k" alt="Mirza Taimur Ali Baig" class="profile-img">
+                <img src="IMG_7971 2" alt="Mirza Taimur Ali Baig" class="profile-img">
             </div>
             <div class="einstein-quote">
                 <p>"Time and space are modes by which we think and not conditions in which we live"</p>
@@ -245,11 +245,11 @@
     <!-- Desktop Experience Cards (hidden on mobile) -->
     <div class="experience-container desktop-experience">
         <!-- Eastern Edge Robotics -->
-        <div class="exp-card" data-target="eastern-edge-modal" tabindex="0" aria-label="Eastern Edge Robotics - Power Electronics Lead">
-            <div class="exp-card-front" style="background-image: url('https://images.squarespace-cdn.com/content/v1/5ecb0bfadd255c127a746499/b5c02068-f008-4584-a5f7-629ce1221231/eastern-edge-robotics-logo.png'); background-color: white; background-size: 70%; background-repeat: no-repeat; background-position: center;">
+        <div class="exp-card" data-target="eastern-edge-modal" tabindex="0" aria-label="">
+            <div class="exp-card-front" style="background-image: url(''); background-color: white; background-size: 70%; background-repeat: no-repeat; background-position: center;">
                 <div class="exp-front-content">
-                    <h3>Power Electronics Lead</h3>
-                    <div class="exp-date">April 2025 - Present | Intern</div>
+                    <h3></h3>
+                    <div class="exp-date"></div>
                     <div class="click-hint">Click for details</div>
                 </div>
             </div>
@@ -278,11 +278,11 @@
         </div>
 
         <!-- MUN Concrete Toboggan -->
-        <div class="exp-card" data-target="mun-toboggan-modal" tabindex="0" aria-label="MUN Concrete Toboggan - Design Lead">
-            <div class="exp-card-front" style="background-image: url('245954035_102670728873663_772209247307635178_n.jpg'); background-color: #0a2240; background-size: 70%; background-repeat: no-repeat; background-position: center;">
+        <div class="exp-card" data-target="mun-toboggan-modal" tabindex="0" aria-label="">
+            <div class="exp-card-front" style="background-image: url(''); background-color: #0a2240; background-size: 70%; background-repeat: no-repeat; background-position: center;">
                 <div class="exp-front-content">
-                    <h3>Design Lead</h3>
-                    <div class="exp-date">Dec 2023 - Feb 2024 | Volunteer</div>
+                    <h3></h3>
+                    <div class="exp-date"></div>
                     <div class="click-hint">Click for details</div>
                 </div>
             </div>
@@ -305,21 +305,21 @@
         <!-- Eastern Edge Robotics -->
         <div class="exp-accordion" data-id="eastern-edge">
             <div class="exp-header">
-                <div class="exp-logo" style="background-image: url('https://images.squarespace-cdn.com/content/v1/5ecb0bfadd255c127a746499/b5c02068-f008-4584-a5f7-629ce1221231/eastern-edge-robotics-logo.png')"></div>
+                <div class="exp-logo" style="background-image: url('')"></div>
                 <div class="exp-title">
-                    <h3>Power Electronics Lead</h3>
-                    <div class="exp-date">April 2025 - Present | Intern</div>
+                    <h3></h3>
+                    <div class="exp-date"></div>
                 </div>
                 <i class="fas fa-chevron-down exp-arrow"></i>
             </div>
             <div class="exp-content">
                 <ul>
-                    <li>Designed underwater ocean monitoring system for MATE ROV competition</li>
-                    <li>Configured lithium battery arrays reducing heat generation by 30%</li>
-                    <li>Maintained 98% data accuracy with waterproofed sensors</li>
-                    <li>Implemented IEEE standards for power system design</li>
-                    <li>Developed custom power distribution network for ROV subsystems</li>
-                    <li>Optimized energy consumption for 12-hour continuous operation</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </div>
         </div>
@@ -369,21 +369,16 @@
         <!-- MUN Concrete Toboggan -->
         <div class="exp-accordion" data-id="mun-toboggan">
             <div class="exp-header">
-                <div class="exp-logo" style="background-image: url('245954035_102670728873663_772209247307635178_n.jpg')"></div>
+                <div class="exp-logo" style="background-image: url('')"></div>
                 <div class="exp-title">
-                    <h3>Design Lead</h3>
-                    <div class="exp-date">Dec 2023 - Feb 2024 | Volunteer</div>
+                    <h3></h3>
+                    <div class="exp-date"></div>
                 </div>
                 <i class="fas fa-chevron-down exp-arrow"></i>
             </div>
             <div class="exp-content">
                 <ul>
-                    <li>Led structural design evaluation using AutoCAD, achieving 3rd place in national competition</li>
-                    <li>Prototyped load-bearing components, reducing material waste by 15% through iterative testing</li>
-                    <li>Programmed Arduino-based strain gauges on 1:8 scale model to monitor structural integrity</li>
-                    <li>Collaborated with 15-member multidisciplinary team on ergonomic improvements</li>
-                    <li>Conducted finite element analysis to optimize weight distribution</li>
-                    <li>Documented design process for future team reference</li>
+                    <li></li>
                 </ul>
             </div>
         </div>
@@ -416,16 +411,11 @@
     <div id="eastern-edge-modal" class="experience-modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="eastern-edge-modal-title">
         <div class="modal-container">
             <button class="close-modal" aria-label="Close modal">&times;</button>
-            <h3 id="eastern-edge-modal-title">Power Electronics Lead <span class="company-name">@ Eastern Edge Robotics</span></h3>
-            <div class="exp-date">April 2025 - Present | Intern</div>
+            <h3 id="eastern-edge-modal-title"> <span class="company-name"></span></h3>
+            <div class="exp-date"></div>
             <div class="modal-exp-details">
                 <ul>
-                    <li>Designed underwater ocean monitoring system for MATE ROV competition</li>
-                    <li>Configured lithium battery arrays reducing heat generation by 30%</li>
-                    <li>Maintained 98% data accuracy with waterproofed sensors</li>
-                    <li>Implemented IEEE standards for power system design</li>
-                    <li>Developed custom power distribution network for ROV subsystems</li>
-                    <li>Optimized energy consumption for 12-hour continuous operation</li>
+                    <li></li>
                 </ul>
             </div>
             <button class="back-link">← Back to Experience</button>
@@ -474,16 +464,11 @@
     <div id="mun-toboggan-modal" class="experience-modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="mun-toboggan-modal-title">
         <div class="modal-container">
             <button class="close-modal" aria-label="Close modal">&times;</button>
-            <h3 id="mun-toboggan-modal-title">Design Lead <span class="company-name">@ MUN Concrete Toboggan</span></h3>
-            <div class="exp-date">Dec 2023 - Feb 2024 | Volunteer</div>
+            <h3 id="mun-toboggan-modal-title"> <span class="company-name"></span></h3>
+            <div class="exp-date"></div>
             <div class="modal-exp-details">
                 <ul>
-                    <li>Led structural design evaluation using AutoCAD, achieving 3rd place in national competition</li>
-                    <li>Prototyped load-bearing components, reducing material waste by 15% through iterative testing</li>
-                    <li>Programmed Arduino-based strain gauges on 1:8 scale model to monitor structural integrity</li>
-                    <li>Collaborated with 15-member multidisciplinary team on ergonomic improvements</li>
-                    <li>Conducted finite element analysis to optimize weight distribution</li>
-                    <li>Documented design process for future team reference</li>
+                    <li></li>
                 </ul>
             </div>
             <button class="back-link">← Back to Experience</button>
