--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="about-content">
         <div class="left-column">
             <div class="profile-image">
-                <img src="IMG_7971 2" alt="Mirza Taimur Ali Baig" class="profile-img">
+                <img src="IMG_7971-2.png" alt="Mirza Taimur Ali Baig" class="profile-img">
             </div>
             <div class="einstein-quote">
                 <p>"Time and space are modes by which we think and not conditions in which we live"</p>
