--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Add this for smooth theme transitions -->
+    <!-- for smooth theme transitions -->
     <style>
         html {
             scroll-behavior: smooth;
@@ -36,7 +36,7 @@
             </div>
         </header>
 
-        <!-- Update this section in your index.html -->
+
 <section id="about" class="fade-scroll">
     <h2><span class="section-spark">About Me</span></h2>
     <div class="about-content">
@@ -305,7 +305,7 @@
         <!-- GIP -->
         <div class="exp-accordion" data-id="GIP">
             <div class="exp-header">
-                <div class="exp-logo" style="background-image: url('')"></div>
+                <div class="exp-logo" style="background-image: url('GIP.png')"></div>
                 <div class="exp-title">
                     <h3>Electrical Estimating Intern</h3>
                     <div class="exp-date">Sept 2025 - Present | Co-Op</div>
@@ -325,7 +325,7 @@
         <!-- valiant -->
         <div class="exp-accordion" data-id="valiant-aerotech">
             <div class="exp-header">
-                <div class="exp-logo" style="background-image: url('')"></div>
+                <div class="exp-logo" style="background-image: url('valiant.jpeg')"></div>
                 <div class="exp-title">
                     <h3>Electrical Flight Systems Lead</h3>
                     <div class="exp-date">Sept 2025 - Present</div>
